--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="top"
+        android:text="@string/app_creator"
+        android:textAlignment="center"
+        android:textSize="20sp"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -19,26 +29,61 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/textView5"
+            <RadioButton
+                android:id="@+id/radioButton_Time"
+                android:layout_width="109dp"
+                android:layout_height="wrap_content"
+                android:checked="true"
+                android:onClick="onRadioButton_Click"
+                android:tag="1"
+                android:text="@string/radBut_Time" />
+
+            <RadioButton
+                android:id="@+id/radioButton_Lenght"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="TextView"
+                android:gravity="center"
+                android:onClick="onRadioButton_Click"
+                android:tag="2"
+                android:text="@string/radBut_Lenght" />
+
+            <RadioButton
+                android:id="@+id/radioButton_Weight"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:onClick="onRadioButton_Click"
+                android:tag="3"
+                android:text="@string/radBut_Weight" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textView_From"
+                android:layout_width="35dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/textView_From"
                 android:textSize="18sp" />
 
             <EditText
-                android:id="@+id/editTextTextPersonName2"
-                android:layout_width="wrap_content"
+                android:id="@+id/editText_Value"
+                android:layout_width="66dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
                 android:inputType="textPersonName"
-                android:text="Name" />
+                android:text="@string/editText_Value"
+                android:textSize="14sp" />
 
             <Spinner
                 android:id="@+id/spinner_from"
-                android:layout_width="wrap_content"
+                android:layout_width="71dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1" />
 
@@ -50,24 +95,24 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/textView6"
-                android:layout_width="29dp"
+                android:id="@+id/textView_To"
+                android:layout_width="13dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="TextView"
+                android:text="@string/textView_To"
                 android:textSize="18sp" />
 
             <TextView
-                android:id="@+id/textView7"
-                android:layout_width="168dp"
+                android:id="@+id/textView_Result"
+                android:layout_width="88dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="TextView"
+                android:text="@string/textView_Result"
                 android:textSize="18sp" />
 
             <Spinner
                 android:id="@+id/spinner_to"
-                android:layout_width="3dp"
+                android:layout_width="70dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="right" />
@@ -79,13 +124,14 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/button2"
+                android:id="@+id/button_Convert"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:onClick="on_converter"
-                android:text="Button" />
+                android:onClick="onConverter_Click"
+                android:text="@string/button_Convert" />
         </LinearLayout>
+
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
